tests/baselines/reference/errorTypesAsTypeArguments.errors.txt
==== tests/cases/compiler/errorTypesAsTypeArguments.ts (2 errors) ====
    interface Foo<A> {
      bar(baz: Foo<B>): Foo<C>;
                   ~
!!! error TS2095: Could not find symbol 'B'.
                            ~
!!! error TS2095: Could not find symbol 'C'.
    }